argocd/haste-server-app/03-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: haste-redis
  namespace: haste-server
spec:
  selector:
    app: haste-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
